bk_ida/gccida/g0/cpp_quote_string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cpp_quote_string/src/cppmacro.c:726:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[c] & 0x10) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cpp_quote_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cpp_quote_string/src/obj/cppmacro.o] Error 1
